<resources>
    <string name="app_name">FitnessEvent</string>
    <string name="title_home">Home</string>
    <string name="title_like">Like</string>
    <string name="title_notifications">notifications</string>
    <string name="title_search">My Created Events</string>
    <string name="title">Fitness Event in Boston</string>
    <string name="title1">Boston Jogger Tour Celebration Run</string>
    <string name="description">description</string>
    <string name="contentOfDescription">Join us for the Boston Jogger Tour, presented by Marathon Sports and Hoka! We\'re running the streets throughout the fall season. Come to each event for some fun, custom swag, raffles, and more! We\'ll celebrate the final run at Sam Adams - all paces welcome! Here\'s the full list of our event series:\n\n\nMarathon Sports Boston 9/18 6:30PM\n\n\nMarathon Sports Wellesley 10/16 6:30PM\n\n\nMarathon Sports Cambridge 10/30 6:30PM\n\n\nMarathon Sports Brookline 11/7 6:30PM\n\n\nCelebration Run  Party at Sam Adams 11/23 10AM\n\n</string>
    <string name="time1">2019-11-23 10:00:00 - 12:00:00</string>
    <string name="location1">Samuel Adams Boston Brewery 30 Germania Street Boston, MA 02130</string>
    <string name="running"> <li>running</li> </string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic IDP Auth</string>
    <string name="desc_generic_idp">Use a generic identity provider, like Microsoft or Yahoo, to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">User: %s</string>
    <string name="firebase_user_management">User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">Generic IDP Sign In\nwith Microsoft</string>
    <string name="msft_status_fmt">Microsoft User: %s</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="name_hint">Please enter event name</string>
    <string name="intro_hint">Please enter event introduction</string>
    <string name="date_hint">Please enter date</string>
    <string name="address_hint">Please enter address</string>
    <string name="submit_msg">Submit</string>
    <string name="name_tag">Event Name:</string>
    <string name="intro_tag">Event Introduction:</string>
    <string name="date_tag">Date:</string>
    <string name="address_tag">Address:</string>
    <string name="title_activity_event_maps">Map</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="likes_button">My Likes</string>
    <string name="help_button">Help</string>
    <string name="mycreate_button">My Creates</string>
    <string name="myinterest_button">My Interests</string>
    <string name="about_button">About</string>
    <string name="askSignin_text">Sign In/ Sign Up</string>
    <string name="words_text">Sign In/ Sign up to join us!</string>
    <string name="myinterests_text">Uh-Oh, maybe you should mark your interests first!</string>
    <string name="interestsTitle">My Interests</string>
    <string name="myLikesTitle">My Likes</string>
    <string name="mylikes_text">Uh-oh, maybe you should mark your likes first!</string>

    <string name="basic_info">Create Fitness Event</string>
    <string name="event_title">Event Title</string>
    <string name="fitness">Fitness</string>
    <string name="Location">Location</string>
    <string name="time">Time</string>
    <string name="start_date">Start Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_date">End Date:</string>
    <string name="end_time">End Time:</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="ticket">Ticket</string>
    <string name="Description">Description</string>
    <!-- for filter activity-->
    <string-array name="catelogy_array">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Camps</item>
        <item>Cheer</item>
        <item>Cycling</item>
        <item>Exercise</item>
        <item>Fighting &amp; Martial Arts</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Hockey</item>
        <item>Lacrosse</item>
        <item>Motorsports</item>
        <item>Mountain Biking</item>
        <item>Obstacles</item>
        <item>Rugby</item>
        <item>Running</item>
        <item>Snow Sports</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Swimming &amp; Water Sports</item>
        <item>Tennis</item>
        <item>Track &amp; Field</item>
        <item>Volleyball</item>
        <item>Walking</item>
        <item>Weightlifting</item>
        <item>Wrestling</item>
        <item>Yoga</item>
        <item>Other</item>
    </string-array>
</resources>
